day04: ex00 done

--- a/day04/ex00/Makefile
+++ b/day04/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: absela <absela@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2023/01/11 03:25:31 by absela            #+#    #+#              #
-#    Updated: 2023/01/11 03:27:11 by absela           ###   ########.fr        #
+#    Updated: 2023/01/11 22:54:56 by absela           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,9 +16,11 @@ RESET		=	\e[0m
 _SUCCESS	=	$(GREEN)SUCCESS$(RESET)
 REMOV		=	$(RED)REMOVED$(RESET)
 
-NAME = 
+NAME = Animal
 
-src =  	main.cpp 
+src =  	main.cpp Animal.cpp Cat.cpp Dog.cpp WrongAnimal.cpp WrongCat.cpp
+
+HDR = Animal.hpp Cat.hpp Dog.hpp WrongAnimal.hpp WrongCat.hpp
 
 CXX = c++
 
